fixed dark mode n other errors

--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@ footer input[type="submit"]:active {
   left: 2px;
   top: 2px;
   border-radius: 50%;
-  transition: transform 0.2s linear;
+  transition: transform 250ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 
 .checkbox:checked + .checkbox-label .ball {
